# travis-test

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: Calculator.hpp
src/: CMakeLists.txt  Calculator.cpp
test/: CMakeLists.txt  CalculatorTests.cpp
