cmake_minimum_required (VERSION 3.1)
project (travis-test)
set (APPLICATION_NAME "travis-test")
set (APPLICATION_CODENAME "${PROJECT_NAME}")
set (APPLICATION_COPYRIGHT_YEARS "2015")
set (APPLICATION_VERSION_MAJOR 0)
set (APPLICATION_VERSION_MINOR 1)
set (APPLICATION_VERSION_PATCH 0)
set (APPLICATION_VERSION_TYPE SNAPSHOT)
set (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
set (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release


set (EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
set (LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/lib")
set (CATCH_DIR "${PROJECT_SOURCE_DIR}/thirdparty/catch")


include_directories("${PROJECT_SOURCE_DIR}/include")
add_subdirectory(src)
enable_testing()
add_subdirectory(test)
